# learn-now-button

./: .gitignore  .gitmodules  README.md  __init__.py  browser_menus.py  config.json  config.py  grab_key.py  grade_now.py  learn_now.py  main_menu.py  package.sh  protocols.py  pyproject.toml  reset_card_scheduling.py  settings.py  settings_dialog.py
.github/workflows/: make_release.yml
card_management/: __init__.py  browser_menus.py  config.py  grade_now.py  learn_now.py  main_menu.py  reset_card_scheduling.py  settings_dialog.py
playground/: run_settings_dialog.py
scripts/: format.sh  package.sh
