[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling>=1.24",
    "hatch-vcs>=0.4",
]

[project]
name = "card_management"
dynamic = ["version"]
description = "Put cards in the learning queue and answer cards from the Card Browser."
readme = "README.md"
requires-python = "~=3.9" # anki officially only runs on 3.9
license = { file = "LICENSE" }
keywords = ["ajatt"]
authors = [
    { name = "Ajatt-Tools and contributors" },
    { name = "Ren Tatsumoto", email = "tatsu@autistici.org" },
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Ajatt-Tools/learn-now-button"
Issues = "https://github.com/Ajatt-Tools/learn-now-button/issues"
Source = "https://github.com/Ajatt-Tools/learn-now-button"

# Tools

[tool.hatch.version]
source = "vcs"
path = "card_management/__about__.py"

[tool.hatch.build.hooks.vcs]
version-file = "card_management/__about__.py"

[tool.hatch.envs.dev]
dependencies = [
  "mypy>=1.0.0",
  "isort",
  "pytest",
  "aqt",
  "pyupgrade",
  "beartype",
]
python = "3.9"

[[tool.hatch.envs.dev.matrix]]
# https://hatch.pypa.io/latest/tutorials/testing/overview/#testing-projects
python = ["3.9", ]

[tool.hatch.envs.dev.scripts]
# run as `hatch run dev:scriptname`
check = "mypy --install-types --non-interactive {args:card_management tests}"
test = "pytest"
testv = "pytest -vvv -s"
format = "$(git rev-parse --show-toplevel)/scripts/format.sh"
package = "$(git rev-parse --show-toplevel)/scripts/package.sh"

[tool.coverage.run]
source_pkgs = ["card_management", "tests"]
branch = true
parallel = true
omit = [
    "card_management/__about__.py",
]

[tool.coverage.paths]
card_management = ["card_management", "*/card_management/card_management"]
tests = ["tests", "*/card_management/tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 120
target-version = ['py39']
unstable = true

[tool.isort]
profile = "black"

[tool.basedpyright]
reportUnusedCallResult = false
